solved title h3 spacing and view position

--- a/src/styles/components/_banner.scss
+++ b/src/styles/components/_banner.scss
@@ -25,7 +25,7 @@
       width: 100%;
       height: 100%;
       opacity: 0.25;
-      background-image: url(/public/images/grain.png);
+      background-image: url(/images/grain.png);
       background-size: auto;
       background-position: center;
       background-repeat: repeat;
@@ -48,12 +48,14 @@
       );
       border-radius: inherit;
       --m: conic-gradient(#000 0 0);
-      mask: var(--m) content-box exclude, var(--m);
+      mask:
+        var(--m) content-box exclude,
+        var(--m);
       pointer-events: none;
     }
     margin-top: 1px;
     padding: 2rem;
-    background-image: url(/public/images/banner-background.png);
+    background-image: url(/images/banner-background.png);
     background-size: cover;
     background-position: top;
     background-repeat: no-repeat;
@@ -65,8 +67,11 @@
     // background-position: top;
     // background-repeat: round;
     // }
-    h3 {
+    span {
       font-size: $font-size-700;
+    }
+    p {
+      margin-top: 0.5rem;
     }
   }
   &-image {
